# fwgsl

./: .gitmodules  CMakeLists.txt
Core/: CMakeLists.txt
Core/fwgsl-embind/: CMakeLists.txt  main.cpp
Core/twgsl/: CMakeLists.txt  tail.js
Core/twgsl/Source/: callbacks.js  main.cpp
Dependencies/: CMakeLists.txt
Dependencies/dawn-tint/: CMakeLists.txt
